Fixing problem that if you were in Card View and you were using Advanced Search (which pushes the card view grid down a bit to make room) and then went into a Running experiment dialog, and then exited the dialog, the grid would be overlapping the advanced search widgets.  Not sure why the code to adjust that wasn't working, but changing the position change to use Angular conditional classes works.

--- a/modules/ui/app/styles/wasabi.scss
+++ b/modules/ui/app/styles/wasabi.scss
@@ -4322,3 +4322,7 @@ form input.ng-dirty.ng-invalid:not(.ng-focused) {
 .notAllowed {
     cursor: no-drop !important;
 }
+
+.gridWithAdvanced {
+    margin-top: 40px;
+}
